--- a/settings/fields.mdx
+++ b/settings/fields.mdx
@@ -34,7 +34,7 @@ fields: [
 
 The user would then match these fields to the columns in their imported file, resulting in a review screen which looks like this:
 
-![The review screen with data](\images\assets\images\basicFields_review-23cd9388ebca4f4b5e251dee170cd47f.png)
+![The review screen with data](\images\assets\images\basicFields_review.png)
 
 And, when submitted, Dromo would provide you with a result data array like this:
 
@@ -143,215 +143,7 @@ And, when submitted, Dromo would provide you with a result data array like this:
   The result payload will have an array of all mapped columns' values instead of just a single value. Row hooks will have an entry in a `manyToOne` array for each mapped column.
 </ResponseField>
 
-## Validators[​](#validators "Direct link to Validators")
 
-Indepedent of field types, Dromo provides a number of validators that you can use to ensure that get clean data in exactly the format you want them. You can use validators to highlight errors for the user and ensure that they fix the errors before submitting an import.
-
-You can specify validators for a field by providing the `validators` parameter, which takes an array of validator objects.
-
-Each object must have a `validate` parameter which specifies what kind of validation it is. Every validator takes an optional `errorMessage` which you can use to provide a customized error message to the user when the validation fails. The error message is shown to the user as a tooltip on invalid cells.
-
-![A validator error message shown to the user](\images\assets\images\validator_error-d3ca93911f5e533aad98c68e9fe0b339.png)
-
-Dromo provides the following validators.
-
-### Required[​](#required "Direct link to Required")
-
-<ResponseField name="validate" type='"required"' required>
-  Specifies that the field cannot be empty.
-</ResponseField>
-
-<ResponseField name="errorMessage" type="string">
-  Custom error message to display when validation fails.
-</ResponseField>
-
-### Unique[​](#unique "Direct link to Unique")
-
-<ResponseField name="validate" type='"unique" | "unique_case_insensitive"' required>
-  Specifies that all non-empty values in the column must be distinct (non-equal).
-
-  You can also validate uniqueness case-insensitively with `{ validate: "unique_case_insensitive" }`.
-</ResponseField>
-
-<ResponseField name="errorMessage" type="string">
-  Custom error message to display when validation fails.
-</ResponseField>
-
-### Unique across multiple fields[​](#unique-across-multiple-fields "Direct link to Unique across multiple fields")
-
-<ResponseField name="validate" type='"unique_with"' required>
-  The `unique_with` validator can be used to validate uniqueness across multiple fields.
-</ResponseField>
-
-<ResponseField name="uniqueKey" type="string" required>
-  A unique identifier shared across all fields that should be validated together for uniqueness.
-</ResponseField>
-
-<ResponseField name="errorMessage" type="string">
-  Custom error message to display when validation fails.
-</ResponseField>
-
-The `unique_with` validator can be used to validate uniqueness across multiple fields.
-
-To use it, place a `unique_with` validator on each field that you want to be part of the uniqueness validation, all sharing the same `uniqueKey`.
-
-Here is an example set of fields using `unique_with` validators used to validate that the combination of the first name and last name fields are unique.
-
-<CodeGroup>
-```javascript
-[
-  {
-    label: "First Name",
-    key: "firstName",
-    validators: [
-      {
-        validate: "unique_with",
-        uniqueKey: "full name",
-      },
-    ],
-  },
-  {
-    label: "Last Name",
-    key: "lastName",
-    validators: [
-      {
-        validate: "unique_with",
-        uniqueKey: "full name",
-      },
-    ],
-  },
-]
-```
-</CodeGroup>
-
-And here is an example of the validators in action:
-
-![](\images\assets\images\unique_with_example-1c91bd7d7d02a081ea2980233bb915a5.png)
-
-### Matches a regular expression[​](#matches-a-regular-expression "Direct link to Matches a regular expression")
-
-<ResponseField name="validate" type='"regex_match" | "regex_exclude"' required>
-  You can validate that a field matches the given regular expression with the `regex_match` validator.
-
-  Conversely, you can validate that a field does *not* match a regular expression with the `regex_exclude` validator.
-</ResponseField>
-
-<ResponseField name="regex" type="string | RegExp" required>
-  The regular expression pattern to match against.
-</ResponseField>
-
-<ResponseField name="regexOptions" type="RegexOptions">
-  Optional regex configuration options.
-</ResponseField>
-
-<ResponseField name="errorMessage" type="string">
-  Custom error message to display when validation fails.
-</ResponseField>
-
-The Dromo uploader uses standard JavaScript regular expressions. You can set the `regex` key as either a `RegExp` literal/object or a string.
-
-If you choose to use a string, be careful to properly escape special characters in your regex. For example, the regex `/^"\d+"$/` should be passed in as `"^\"\\d+\"$"`. Additionally, if using a string, note that you cannot pass in regex flags directly in your regex. Instead, you may optionally provide a `regexOptions` parameter with the validator which takes an object with the following keys:
-
-* `ignoreCase: boolean` - Case insensitive flag (regex flag `i`)
-* `dotAll: boolean` - Matches all including any line breaks (regex flag `s`)
-* `multiline: boolean` - Multiline flag (regex flag `m`)
-* `unicode: boolean` - Unicode flag (regex flag `u`)
-
-### Require with other fields[​](#require-with-other-fields "Direct link to Require with other fields")
-
-<ResponseField name="validate" type='"require_with" | "require_without" | "require_with_all" | "require_without_all"' required>
-  You can use these validators to require that a field be non-empty *only if* other fields are present or empty. There are four variations.
-</ResponseField>
-
-<ResponseField name="fields" type="string[]" required>
-  Array of field keys to check against.
-</ResponseField>
-
-<ResponseField name="errorMessage" type="string">
-  Custom error message to display when validation fails.
-</ResponseField>
-
-You can use these validators to require that a field be non-empty *only if* other fields are present or empty. There are four variations:
-
-> `{ validate: "require_with", fields: [<fieldKey>, ...] }`
-
-This will require that the field has a value if **any** of the fields listed in the `fields` array are **non-empty**.
-
-> `{ validate: "require_without", fields: [<fieldKey>, ...] }`
-
-This will require that the field has a value if **any** of the fields listed in the `fields` array are **empty**.
-
-> `{ validate: "require_with_all", fields: [<fieldKey>, ...] }`
-
-This will require that the field has a value if **all** of the fields listed in the `fields` array are **non-empty**.
-
-> `{ validate: "require_without_all", fields: [<fieldKey>, ...] }`
-
-This will require that the field has a value if **all** of the fields listed in the `fields` array are **empty**.
-
-### Require with other field values[​](#require-with-other-field-values "Direct link to Require with other field values")
-
-<ResponseField name="validate" type='"require_with_values" | "require_without_values" | "require_with_all_values" | "require_without_all_values"' required>
-  You can use these validators to require that a field be non-empty *only if* other fields have specific values. There are four variations.
-</ResponseField>
-
-<ResponseField name="fieldValues" type="{ [fieldKey: string]: string }" required>
-  Object mapping field keys to their required values.
-</ResponseField>
-
-<ResponseField name="errorMessage" type="string">
-  Custom error message to display when validation fails.
-</ResponseField>
-
-You can use these validators to require that a field be non-empty *only if* other fields have specific values. There are four variations:
-
-> `{ validate: "require_with_values", fieldValues: { <fieldKey>: <fieldValue>, ... } }`
-
-This will require that the field has a value if **any** of the fields contain the corresponding value specified under `fieldValues`.
-
-> `{ validate: "require_without_values", fieldValues: { <fieldKey>: <fieldValue>, ... } }`
-
-This will require that the field has a value if **any** of the fields **do not** contain the corresponding value specified under `fieldValues`.
-
-> `{ validate: "require_with_all_values", fieldValues: { <fieldKey>: <fieldValue>, ... } }`
-
-This will require that the field has a value if **all** of the fields contain the corresponding value specified under `fieldValues`.
-
-> `{ validate: "require_without_all_values", fieldValues: { <fieldKey>: <fieldValue>, ... } }`
-
-This will require that the field has a value if **all** of the fields **do not** contain the corresponding value specified under `fieldValues`.
-
-### Length[​](#length "Direct link to Length")
-
-<ResponseField name="validate" type='"length"' required>
-  Validates that a field's value falls within a minimum or maximum number of characters.
-
-  Either min, max, or both must be defined. Values are inclusive.
-
-  The length validator cannot be used with non-string-based fields, such as number or date fields.
-</ResponseField>
-
-<ResponseField name="min" type="number">
-  Minimum number of characters allowed.
-</ResponseField>
-
-<ResponseField name="max" type="number">
-  Maximum number of characters allowed.
-</ResponseField>
-
-<ResponseField name="errorMessage" type="string">
-  Custom error message to display when validation fails.
-</ResponseField>
-
-### Alphabetical[​](#alphabetical "Direct link to Alphabetical")
-
-<ResponseField name="validate" type='"alphabetical"' required>
-  Validates that a field's value only contains alphabetical characters (a-z, lowercase and uppercase).
-</ResponseField>
-
-<ResponseField name="errorMessage" type="string">
-  Custom error message to display when validation fails.
-</ResponseField>
 
 ## Column matching[​](#column-matching "Direct link to Column matching")
 
