--- a/settings/hooks.mdx
+++ b/settings/hooks.mdx
@@ -5,7 +5,7 @@ description: "Dromo's Hooks help you reformat, validate, and correct data automa
 
 The diagram below shows the general flow for Dromo. Column hooks run first and only once after the "column matching" stage. After these run, row hooks will run for each record. Row hooks will also run on a record after it is updated by the user. If you only want to run a row hook on init or on change, you can configure it accordingly.
 
-![](\images\assets\images\hooks_flow_chart-70959ea41e1d9fbcd2ce39b885433ff3.png)
+![](\images\assets\images\hooks_flow_chart.png)
 
 ## Column hooks[​](#column-hooks "Direct link to Column hooks")
 
