--- a/guides/schema-builder.mdx
+++ b/guides/schema-builder.mdx
@@ -13,17 +13,17 @@ Dromo's Schema Studio streamlines creating a schema, so you can start working wi
 
 Once you've [logged into](https://dashboard.dromo.io/auth/login) your Dromo account, you can access Schema Studio from your [Dromo dashboard](https://dashboard.dromo.io/schemas). Here, you can create a new schema or update any schemas you've previously created. Click **Create Schema**:
 
-![Navigate to Schema Studio](/images/guides/assets/images/highlight_dashboard_schemaBuilder.png)
+![Navigate to Schema Studio](/images/guides/highlight_dashboard_schemaBuilder.png)
 
 <Steps>
   <Step title="Add a Name">
-    ![Adding a schema name](/images/guides/assets/images/add_schema_name.png)
+    ![Adding a schema name](/images/guides/add_schema_name.png)
   </Step>
 
   <Step title="Customize your importer">
     Next, you can customize the importer your end-user interacts with:
 
-    ![Customizing the general settings of your Dromo importer](/images/guides/assets/images/schemaBuilder_general_settings.png)
+    ![Customizing the general settings of your Dromo importer](/images/guides/schemaBuilder_general_settings.png)
 
     You can optionally configure the importer's:
 
@@ -39,7 +39,7 @@ Once you've [logged into](https://dashboard.dromo.io/auth/login) your Dromo acco
 
     You can also optionally customize your importer's appearance with custom colors. You can preview your Dromo importer's appearance by clicking **Test now** in the footer: 
     
-    ![Use the Test Now button to see your importer](/images/guides/assets/images/test_now.png)
+    ![Use the Test Now button to see your importer](/images/guides/test_now.png)
   </Step>
 
   <Step title="Add fields to your schema">
@@ -52,7 +52,7 @@ Once you've [logged into](https://dashboard.dromo.io/auth/login) your Dromo acco
     1. Importing a CSV and letting Schema Studio automatically detect the field and types.
     2. Manually clicking the **Add field** button.
 
-    ![Use an existing file or manually add fields](/images/guides/assets/images/add_fields.png)
+    ![Use an existing file or manually add fields](/images/guides/add_fields.png)
 
     Once you've added a new field, clicking on the name of that field enables you to customize or delete it. You can customize a field's:
 
@@ -61,19 +61,19 @@ Once you've [logged into](https://dashboard.dromo.io/auth/login) your Dromo acco
     * Description: A description for this field that your users will see in the importer.
     * Type: The [type](/fields/field-types) of data your user should input (e.g., email, date, text, etc.).
 
-    ![The options to customize a field](/images/guides/assets/images/customize_field1.png)
+    ![The options to customize a field](/images/guides/customize_field1.png)
 
     Additionally, you can use [**validators**](/fields#validators) to enforce rules for the data a user is allowed to import. You can choose to make a field required, unique, follow a particular [Regex](https://en.wikipedia.org/wiki/Regular_expression) pattern, or any combination of the above:
 
-    ![The validators you can add to a field](/images/guides/assets/images/customize_field2.png)
+    ![The validators you can add to a field](/images/guides/customize_field2.png)
 
     You can try out your importer settings and fields in real-time using the **Test now** button on the footer on the screen:
 
-    ![Click test now to try our your schema](/images/guides/assets/images/test_now_focus.png)
+    ![Click test now to try our your schema](/images/guides/test_now_focus.png)
 
     Once you've customized your schema, click **Save schema**. You'll be redirected to the main Schema Studio page, where you can see your new schema:
 
-    ![New schema added to total list](/images/guides/assets/images/new_schema_added.png)
+    ![New schema added to total list](/images/guides/new_schema_added.png)
   </Step>
 </Steps>
 
@@ -81,7 +81,7 @@ Once you've [logged into](https://dashboard.dromo.io/auth/login) your Dromo acco
 
 To start using a schema in your application, click on the angled brackets icon in the Schemas Tab in the Dashboard:
 
-![Schema icons](/images/guides/assets/images/angled_brackets_focus.png)
+![Schema icons](/images/guides/angled_brackets_focus.png)
 
 Copy and paste the pop-up code block into your own website's code and you're done! 🎉 You should be able to test the flow now. 
 
@@ -121,7 +121,7 @@ dromo.onResults((response, metadata) => {
 
 Currently, your importer doesn't know *who* is using it to upload information. If a user uploads data, there is no associated metadata for that user, so all user-related fields are left blank:
 
-![No set user for an Import](/images/guides/assets/images/no_set_user_in_imports.png)
+![No set user for an Import](/images/guides/no_set_user_in_imports.png)
 
 However, you can add more context to an upload by setting user metadata about the end user to associate with an import:
 
@@ -165,4 +165,4 @@ You can switch your `DromoUploader` into development mode using the `setDevelopm
 
 The importer now shows a development mode banner, and all incoming imports are now flagged as development imports and you don't get charged for them!
 
-![Development Mode](/images/guides/assets/images/development_mode_banner.png)
+![Development Mode](/images/guides/development_mode_banner.png)
