--- a/index.mdx
+++ b/index.mdx
@@ -72,5 +72,5 @@ Get up and running with Dromo in minutes. Choose the integration that works best
 </CardGroup>
 
 <Note>
-  **Questions?** Chat with us anytime using the chat bubble, join our [Discord community](https://discord.gg/dromo), or email us at [contact@dromo.io](mailto:contact@dromo.io).
+  **Questions?** Chat with us anytime using the chat bubble, or email us at [support@dromo.io](mailto:support@dromo.io).
 </Note>
